2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c (grub_jfs_find_file): Handle "." and "..".

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (list_file): Set mtime to correct value.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Don't skip "." and
	"..".

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfsplus.c (grub_hfsplus_catfile): New field parentid.
	(grub_hfsplus_iterate_dir): Add "." and "..".

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (canonicalize): Handle "..".
	(grub_cpio_find_file) [MODE_USTAR]: Handle hardlinks.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (GRUB_BTRFS_ITEM_TYPE_INODE_REF): New enum value.
	(find_path): Handle "." and "..".

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_file): New field hardlink.
	(GRUB_AFFS_FILETYPE_HARDLINK): New enum value.
	(grub_affs_iterate_dir): Handle hardlinks.

2012-05-26  Matthew Garrett  <mjg@redhat.com>

	* grub-core/term/efi/console.c (grub_efi_console_init): Set text mode.
	(grub_efi_console_fini): Likewise.
	* grub-core/video/efi_gop.c (framebuffer): New field offscreen.
	(grub_video_gop_fill_mode_info): Rename to ...
	(grub_video_gop_fill_real_mode_info): ... this.
	(grub_video_gop_fill_mode_info): New function.
	(grub_video_gop_setup): Setup double framebuffer.
	(grub_video_gop_get_info_and_fini): Use original framebuffer.
	Free offscreen.
	(grub_video_gop_swap_buffers): Copy framebuffer.
	(grub_video_gop_fini): Free offscreen buffer.
	* include/grub/efi/graphics_output.h (grub_efi_gop_blt_operation_t):
	New enum.
	(grub_efi_gop_blt_pixel): New struct.

2012-05-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Remove error disabling for objconv.

2012-05-26  Vladimir Serbinenko  <phcoder@gmail.com>
